--- a/src/DatabaseFramework.TemplateFramework/DatabaseFramework.TemplateFramework.csproj
+++ b/src/DatabaseFramework.TemplateFramework/DatabaseFramework.TemplateFramework.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <PackageReadmeFile>Readme.md</PackageReadmeFile>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
   </PropertyGroup>
 
   <ItemGroup>
@@ -15,6 +17,11 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DatabaseFramework.Domain\DatabaseFramework.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\..\Readme.md" Pack="true" PackagePath="\" />
+    <None Include="..\..\LICENSE" Pack="true" PackagePath="\" />
   </ItemGroup>
 
 </Project>
