--- a/src/DatabaseFramework.CodeGeneration/DatabaseFramework.CodeGeneration.csproj
+++ b/src/DatabaseFramework.CodeGeneration/DatabaseFramework.CodeGeneration.csproj
@@ -9,10 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CsharpExpressionDumper.Core" Version="1.5.13" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.0" />
-    <PackageReference Include="pauldeen79.ClassFramework.TemplateFramework" Version="0.28.1" />
-    <PackageReference Include="pauldeen79.TemplateFramework.Core.CodeGeneration" Version="3.0.15" />
+    <PackageReference Include="CsharpExpressionDumper.Core" Version="1.5.14" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.*" />
+    <PackageReference Include="pauldeen79.ClassFramework.TemplateFramework" Version="0.28.5" />
+    <PackageReference Include="pauldeen79.TemplateFramework.Core.CodeGeneration" Version="3.1.4" />
   </ItemGroup>
 
 </Project>
